package com.example.attendancesystem.organization.grpc;

import com.example.attendancesystem.grpc.order.*;
import io.grpc.Status;
import io.grpc.stub.StreamObserver;
import net.devh.boot.grpc.server.service.GrpcService;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

/**
 * Order Service Implementation for gRPC
 * Currently provides placeholder implementations for all order management operations
 * This service will be fully implemented when order management functionality is added to the system
 */
@GrpcService
public class OrderServiceImpl extends OrderServiceGrpc.OrderServiceImplBase {

    private static final Logger logger = LoggerFactory.getLogger(OrderServiceImpl.class);

    @Override
    public void createOrder(CreateOrderRequest request, StreamObserver<OrderResponse> responseObserver) {
        logger.info("Order service - createOrder called for table: {}", request.getTableId());
        
        try {
            // TODO: Implement order creation when order models are added
            OrderResponse response = OrderResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order creation pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in createOrder", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to create order: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getOrder(GetOrderRequest request, StreamObserver<OrderResponse> responseObserver) {
        logger.info("Order service - getOrder called for ID: {}", request.getId());
        
        try {
            OrderResponse response = OrderResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order retrieval pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in getOrder", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get order: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void updateOrderStatus(UpdateOrderStatusRequest request, StreamObserver<OrderResponse> responseObserver) {
        logger.info("Order service - updateOrderStatus called for ID: {} to status: {}", 
                   request.getId(), request.getStatus());
        
        try {
            OrderResponse response = OrderResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order status update pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in updateOrderStatus", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to update order status: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void cancelOrder(CancelOrderRequest request, StreamObserver<OrderResponse> responseObserver) {
        logger.info("Order service - cancelOrder called for ID: {}", request.getId());
        
        try {
            OrderResponse response = OrderResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order cancellation pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in cancelOrder", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to cancel order: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void listOrders(ListOrdersRequest request, StreamObserver<ListOrdersResponse> responseObserver) {
        logger.info("Order service - listOrders called for organization: {}", request.getOrganizationId());
        
        try {
            ListOrdersResponse response = ListOrdersResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order listing pending")
                    .setTotalCount(0)
                    .setPage(request.getPage())
                    .setSize(request.getSize())
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in listOrders", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to list orders: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void updateOrder(UpdateOrderRequest request, StreamObserver<OrderResponse> responseObserver) {
        logger.info("Order service - updateOrder called for ID: {}", request.getId());

        try {
            OrderResponse response = OrderResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order update pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in updateOrder", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to update order: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getOrdersByStatus(GetOrdersByStatusRequest request, StreamObserver<ListOrdersResponse> responseObserver) {
        logger.info("Order service - getOrdersByStatus called for status: {}", request.getStatus());

        try {
            ListOrdersResponse response = ListOrdersResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - orders by status pending")
                    .setTotalCount(0)
                    .setPage(request.getPage())
                    .setSize(request.getSize())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in getOrdersByStatus", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get orders by status: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void addOrderItem(AddOrderItemRequest request, StreamObserver<OrderItemResponse> responseObserver) {
        logger.info("Order service - addOrderItem called for order: {}", request.getOrderId());

        try {
            OrderItemResponse response = OrderItemResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - add order item pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in addOrderItem", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to add order item: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void updateOrderItem(UpdateOrderItemRequest request, StreamObserver<OrderItemResponse> responseObserver) {
        logger.info("Order service - updateOrderItem called for item: {}", request.getId());

        try {
            OrderItemResponse response = OrderItemResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - update order item pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in updateOrderItem", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to update order item: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void removeOrderItem(RemoveOrderItemRequest request, StreamObserver<DeleteResponse> responseObserver) {
        logger.info("Order service - removeOrderItem called for item: {}", request.getId());

        try {
            DeleteResponse response = DeleteResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - remove order item pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in removeOrderItem", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to remove order item: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getOrderStatistics(GetOrderStatisticsRequest request, StreamObserver<OrderStatisticsResponse> responseObserver) {
        logger.info("Order service - getOrderStatistics called for organization: {}", request.getOrganizationId());

        try {
            OrderStatisticsResponse response = OrderStatisticsResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order statistics pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in getOrderStatistics", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get order statistics: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getPopularItems(GetPopularItemsRequest request, StreamObserver<PopularItemsResponse> responseObserver) {
        logger.info("Order service - getPopularItems called for organization: {}", request.getOrganizationId());

        try {
            PopularItemsResponse response = PopularItemsResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - popular items pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in getPopularItems", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get popular items: " + e.getMessage())
                    .asRuntimeException());
        }
    }
}
