package com.example.attendancesystem.grpc.service;

import com.example.attendancesystem.grpc.order.*;
import io.grpc.Status;
import io.grpc.stub.StreamObserver;
import net.devh.boot.grpc.server.service.GrpcService;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

/**
 * Order Service Implementation for gRPC
 * Currently provides placeholder implementations for all order management operations
 * This service will be fully implemented when order management functionality is added to the system
 */
@GrpcService
public class OrderServiceImpl extends OrderServiceGrpc.OrderServiceImplBase {

    private static final Logger logger = LoggerFactory.getLogger(OrderServiceImpl.class);

    @Override
    public void createOrder(CreateOrderRequest request, StreamObserver<OrderResponse> responseObserver) {
        logger.info("Order service - createOrder called for table: {}", request.getTableId());
        
        try {
            // TODO: Implement order creation when order models are added
            OrderResponse response = OrderResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order creation pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in createOrder", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to create order: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getOrder(GetOrderRequest request, StreamObserver<OrderResponse> responseObserver) {
        logger.info("Order service - getOrder called for ID: {}", request.getId());
        
        try {
            OrderResponse response = OrderResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order retrieval pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in getOrder", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get order: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void updateOrderStatus(UpdateOrderStatusRequest request, StreamObserver<OrderResponse> responseObserver) {
        logger.info("Order service - updateOrderStatus called for ID: {} to status: {}", 
                   request.getId(), request.getStatus());
        
        try {
            OrderResponse response = OrderResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order status update pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in updateOrderStatus", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to update order status: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void cancelOrder(CancelOrderRequest request, StreamObserver<OrderResponse> responseObserver) {
        logger.info("Order service - cancelOrder called for ID: {}", request.getId());
        
        try {
            OrderResponse response = OrderResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order cancellation pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in cancelOrder", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to cancel order: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void listOrders(ListOrdersRequest request, StreamObserver<ListOrdersResponse> responseObserver) {
        logger.info("Order service - listOrders called for organization: {}", request.getOrganizationId());
        
        try {
            ListOrdersResponse response = ListOrdersResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order listing pending")
                    .setTotalCount(0)
                    .setPage(request.getPage())
                    .setSize(request.getSize())
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in listOrders", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to list orders: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getOrdersByTable(GetOrdersByTableRequest request, StreamObserver<ListOrdersResponse> responseObserver) {
        logger.info("Order service - getOrdersByTable called for table: {}", request.getTableId());
        
        try {
            ListOrdersResponse response = ListOrdersResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - table orders retrieval pending")
                    .setTotalCount(0)
                    .setPage(0)
                    .setSize(0)
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in getOrdersByTable", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get orders by table: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getOrderAnalytics(GetOrderAnalyticsRequest request, StreamObserver<OrderAnalyticsResponse> responseObserver) {
        logger.info("Order service - getOrderAnalytics called for organization: {}", request.getOrganizationId());
        
        try {
            OrderAnalyticsResponse response = OrderAnalyticsResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - order analytics pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in getOrderAnalytics", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get order analytics: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void processPayment(ProcessPaymentRequest request, StreamObserver<PaymentResponse> responseObserver) {
        logger.info("Order service - processPayment called for order: {}", request.getOrderId());
        
        try {
            PaymentResponse response = PaymentResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Order service not implemented yet - payment processing pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in processPayment", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to process payment: " + e.getMessage())
                    .asRuntimeException());
        }
    }
}
